--- a/Resources/Localization/Languages/English_NA.txt
+++ b/Resources/Localization/Languages/English_NA.txt
@@ -1,20 +1,7 @@
 {
   "Dog": "Dog",
-  "Dutch": "",
-  "English_NA": "",
-  "French": "",
-  "German": "",
-  "Italian": "",
+  "English_NA": "English",
   "Keys_Doc": "",
-  "Spanish": "",
-  "Test1": "",
-  "Test2": "",
-  "Test3": "",
-  "Test4": "",
-  "Test5": "",
-  "Test6": "",
-  "Test7": "",
-  "Test8": "",
-  "Test9": "",
+  "Spanish": "Spanish",
   "WhereIsMy_X": "Where is my {0}?"
 }
